<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="T_ReleaseHandle" Id="{49329f98-259a-474e-af2a-fecd84d47943}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK T_ReleaseHandle EXTENDS T_NamedBase IMPLEMENTS I_TaskState;
VAR
   _symbolHandle : ST_SymbolHandle;
   write : T_AdsWrite;
END_VAR
VAR CONSTANT
   LOG_DEBUG : DWORD := 0;
   LOG_INFO : DWORD := ADSLOG_MSGTYPE_HINT;
   LOG_WARNING : DWORD := ADSLOG_MSGTYPE_WARN;
   LOG_ERROR : DWORD := ADSLOG_MSGTYPE_ERROR;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[write();
]]></ST>
    </Implementation>
    <Property Name="Busy" Id="{96272207-f678-4a10-9cf5-b8ef46ba7d35}">
      <Declaration><![CDATA[PROPERTY Busy : BOOL
]]></Declaration>
      <Get Name="Get" Id="{44250ed0-16f5-48a3-9001-90409046c0ef}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[Busy := write.Busy;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Done" Id="{7be864f6-ba4b-4200-ba89-45812d97b4f7}">
      <Declaration><![CDATA[PROPERTY Done : BOOL
]]></Declaration>
      <Get Name="Get" Id="{5d3e78a0-3303-486d-8b53-6242605e34a9}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[Done := write.Done;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Error" Id="{448627fd-30c5-4fab-8c29-d93ad781fa92}">
      <Declaration><![CDATA[PROPERTY Error : BOOL
]]></Declaration>
      <Get Name="Get" Id="{db84907b-9a03-4fc0-8191-df90268cca4d}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[Error := write.Error;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="TryReleaseHandle" Id="{85758502-e02a-404f-bb25-1758ae1cc940}">
      <Declaration><![CDATA[METHOD TryReleaseHandle : BOOL
VAR_INPUT
   symbolHandle : ST_SymbolHandle;
   adsTimeout : TIME := DEFAULT_ADS_TIMEOUT; // DEFAULT_ADS_TIMEOUT is T#5s;
END_VAR
VAR_OUTPUT
   status : I_TaskState;
END_VAR
VAR
   readWriteOpts : ST_AdsReadWriteOptions;
END_VAR
VAR CONSTANT
   NO_HANDLE : DWORD := 0;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF Busy THEN
   LogWarning('Cannot TryReleaseHandle as Busy');
   RETURN;

END_IF

_symbolHandle := symbolHandle;

readWriteOpts.AdsAddress := _symbolHandle.SymbolAddress.Ads;
readWriteOpts.IndexGroup := ADSIGRP_SYM_RELEASEHND;
readWriteOpts.IndexOffset := 0;
readWriteOpts.WriteParams := F_DWORD(_symbolHandle.Handle);
readWriteOpts.ReadParams := EMPTY_ARG_VALUE;
readWriteOpts.Timeout := adsTimeout;

TryReleaseHandle := write.TryRequest(readWriteOpts, status => status);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="T_ReleaseHandle">
      <LineId Id="467" Count="0" />
      <LineId Id="67" Count="0" />
    </LineIds>
    <LineIds Name="T_ReleaseHandle.Busy.Get">
      <LineId Id="12" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="T_ReleaseHandle.Done.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="T_ReleaseHandle.Error.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="T_ReleaseHandle.TryReleaseHandle">
      <LineId Id="182" Count="14" />
      <LineId Id="26" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>